--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@ pom.xml
 /classes/
 .lein-deps-sum
 .DS_Store
+pom.xml
+*jar
+lib
+classes
+test/midje/scratch
+.cake
+*#*
+*~
+semantic.cache
+pom.xml
+*jar
+lib
+classes
+test/midje/scratch
+.cake
+*#*
+*~
+semantic.cache
